[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kirov-monitoring-sdk"
version = "1.0.0"
description = "Kirov Security Labs - Shared Monitoring & Observability SDK"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "structlog>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
